--- a/memolist.css
+++ b/memolist.css
@@ -1,6 +1,6 @@
 .memo-list {
     z-index: 1000;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.5s;
 
     position: fixed;
     top: 0;
@@ -27,6 +27,7 @@
 }
 
 .mini-memo {
+    transition: all 0.3s;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -60,4 +61,30 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.add-memo {
+    transition: all 0.3s;
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    right: 0;
+
+    padding: 12px 0;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    color: #00000040;
+    font-size: 12px;
+    letter-spacing: -0.5px;
+
+    cursor: pointer;
+}
+
+.add-memo:hover {
+    background-color: #60606080;
+    color: #ffffff;
 }
