--- a/memolist.css
+++ b/memolist.css
@@ -14,6 +14,7 @@
     background-color: #ffe69e;
     transform: translateX(100%);
 
+    overflow-y: scroll;
 
     display: flex;
     flex-direction: column;
@@ -26,7 +27,14 @@
     transform: translateX(0);
 }
 
-.mini-memo {
+.memo-items {
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    padding-bottom: 48px;
+}
+
+.memo-item {
     transition: all 0.3s;
     display: flex;
     flex-direction: column;
@@ -37,22 +45,22 @@
     cursor: pointer;
 }
 
-.mini-memo:hover {
+.memo-item:hover {
     background-color: #00000010;
 }
 
-.mini-memo:active {
+.memo-item:active {
     background-color: #00000020;
 }
 
-.title {
+.memo-item-title {
     color: #1c1c1c;
     font-size: 16px;
     font-weight: bold;
     letter-spacing: -0.5px;
 }
 
-.content {
+.memo-item-content {
     color: #606060;
     font-size: 12px;
     letter-spacing: -0.5px;
@@ -77,14 +85,23 @@
     align-items: center;
     justify-content: center;
 
-    color: #00000040;
+    color: #00000080;
+    background-color: #ffcf4f;
     font-size: 12px;
     letter-spacing: -0.5px;
 
     cursor: pointer;
 }
 
+.add-memo img {
+    opacity: 0.5;
+}
+
 .add-memo:hover {
-    background-color: #60606080;
     color: #ffffff;
+}
+
+.add-memo:hover img {
+    opacity: 1;
+    filter: invert(1);
 }
