--- a/memolist.css
+++ b/memolist.css
@@ -58,6 +58,11 @@
     font-size: 16px;
     font-weight: bold;
     letter-spacing: -0.5px;
+
+    width: 276px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .memo-item-content {
