style: 동기화 중 텍스트 안가려지게 설정

--- a/style/style.css
+++ b/style/style.css
@@ -21,7 +21,7 @@
     background-color: transparent;
     border: none;
     outline: none;
-    padding: 16px;
+    padding: 16px 16px 0 16px;
 
     line-height: 1.7;
 }
@@ -74,14 +74,12 @@
 
 .memo-bottombar {
     transition: all 0.2s ease-in-out;
-    position: absolute;
-    right: 4px;
-    bottom: 4px;
 
     display: flex;
     align-items: center;
+    align-self: flex-end;
 
-    padding: 4px;
+    padding: 8px 8px 8px 0px;
     background-color: #ffe69ebf;
     backdrop-filter: blur(4px);
     border-radius: 4px;
